FIXED #7284 - Top of dashlets being cut off by nav bar

--- a/themes/SuiteP/css/suitep-base/editview.scss
+++ b/themes/SuiteP/css/suitep-base/editview.scss
@@ -5429,6 +5429,7 @@ body.yui-skin-sam.masked .yui-panel-container.yui-dialog.yui-simple-dialog.shado
   top: 100px;
   padding: 20px;
   width: 100%;
+  position: fixed;
   z-index: 103100;
 }
 
